--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.5",
     "node-cron": "^3.0.3",
+    "nodemailer": "^7.0.10",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
